# Oppai_benchmark_c

./: .gitignore  CMakeLists.txt  README.md  meson.build  oppai.c
glad/include/glad/: glad.h
glad/src/: glad.c
src/: benchmark.c  benchmark.h  cli_main.c  cli_main.h  cpu_core_count.c  cpu_core_count.h  gui_main.c  gui_main.h  linkedlist.c  linkedlist.h  main.c  ng_main.c  ng_main.h
winthpool/: thpool.c  thpool.h
